# Supermarket-Helper

./: CMakeLists.txt  supermarket.cpp
fixture/: fixture.cpp  fixture.h  fixturemenu.cpp  fixturemenu.h
menu/: menu.cpp  menu.h
product/: product.cpp  product.h  productcreator.cpp  productcreator.h  productmenu.cpp  productmenu.h
